--- a/revision/1-03-Flowcharts/index.html
+++ b/revision/1-03-Flowcharts/index.html
@@ -77,8 +77,8 @@
         </p>
 
         <p class="spoiler noselect">
-            <el class="default">Tap/click to reveal</el>
-            <el class="answer">Finds and outputs the index of an item in a list, or -1 if not found.</el>
+            <span class="default">Tap/click to reveal</span>
+            <span class="answer">Finds and outputs the index of an item in a list, or -1 if not found.</span>
         </p>
 
         <br />
@@ -92,7 +92,7 @@
         <br /> <br />
         <br /> <br />
 
-        <div id="sub">© Rujul Nayak <el id="year">2024-</el></div>
+        <div id="sub">© Rujul Nayak <span id="year">2024-</span></div>
         <script src="../../year.js"></script>
 
         <script src="../spoilers.js"></script>
