--- a/revision/1-04-Linear-Search/index.html
+++ b/revision/1-04-Linear-Search/index.html
@@ -45,14 +45,14 @@
             <img src="../icons/code.svg" class="icon" />
             Example 1 <br />
             <code>
-                <el class="keyword">SUBROUTINE</el> <el class="other">linearSearch</el>(list, item) <br />
-                &nbsp; <el class="keyword">FOR</el> i &larr; <el class="number">0</el> <el class="keyword">TO</el> <el class="other">LEN</el>(list)-<el class="number">1</el> <br/>
-                &nbsp; &nbsp; <el class="keyword">IF</el> list[i] = item <el class="keyword">THEN</el> <br />
-                &nbsp; &nbsp; &nbsp; <el class="function">RETURN</el> i <br />
-                &nbsp; &nbsp; <el class="keyword">ENDIF</el> <br />
-                &nbsp; <el class="keyword">ENDFOR</el> <br />
-                &nbsp; <el class="function">RETURN</el> <el class="number">-1</el> <br />
-                <el class="keyword">ENDSUBROUTINE</el>
+                <span class="keyword">SUBROUTINE</span> <span class="other">linearSearch</span>(list, item) <br />
+                &nbsp; <span class="keyword">FOR</span> i &larr; <span class="number">0</span> <span class="keyword">TO</span> <span class="other">LEN</span>(list)-<span class="number">1</span> <br/>
+                &nbsp; &nbsp; <span class="keyword">IF</span> list[i] = item <span class="keyword">THEN</span> <br />
+                &nbsp; &nbsp; &nbsp; <span class="function">RETURN</span> i <br />
+                &nbsp; &nbsp; <span class="keyword">ENDIF</span> <br />
+                &nbsp; <span class="keyword">ENDFOR</span> <br />
+                &nbsp; <span class="function">RETURN</span> <span class="number">-1</span> <br />
+                <span class="keyword">ENDSUBROUTINE</span>
             </code>
         </p>
 
@@ -77,8 +77,8 @@
         </p>
 
         <p class="spoiler noselect">
-            <el class="default">Tap/click to reveal</el>
-            <el class="answer"><code>n</code> comparisons (if the item isn't in the list, or it is at the very end). This is called the worst case <b>time complexity</b>, and is written as <code>O(n)</code>.</el>
+            <span class="default">Tap/click to reveal</span>
+            <span class="answer"><code>n</code> comparisons (if the item isn't in the list, or it is at the very end). This is called the worst case <b>time complexity</b>, and is written as <code>O(n)</code>.</span>
         </p>
 
         <br />
@@ -92,7 +92,7 @@
         <br /> <br />
         <br /> <br />
 
-        <div id="sub">© Rujul Nayak <el id="year">2024-</el></div>
+        <div id="sub">© Rujul Nayak <span id="year">2024-</span></div>
         <script src="../../year.js"></script>
 
         <script src="../spoilers.js"></script>
