--- a/revision/1-07-Bubble-Sort/index.html
+++ b/revision/1-07-Bubble-Sort/index.html
@@ -71,12 +71,12 @@
         </p>
 
         <p class="spoiler noselect">
-            <el class="default">Tap/click to reveal</el>
-            <el class="answer">
+            <span class="default">Tap/click to reveal</span>
+            <span class="answer">
                 <code>n</code> passes, and in the <code>x<sup>th</sup></code> pass, there can be up to <code>n - x</code> swaps.
                 So, the maximum number of swaps in bubble sort is <code>&half;(n<sup>2</sup> - n)</code>,
                 and the worst case <b>time complexity</b> is said to be "on the order of <code>O(n<sup>2</sup>)</code>".
-            </el>
+            </span>
         </p>
 
         <br />
@@ -90,7 +90,7 @@
         <br /> <br />
         <br /> <br />
 
-        <div id="sub">© Rujul Nayak <el id="year">2024-</el></div>
+        <div id="sub">© Rujul Nayak <span id="year">2024-</span></div>
         <script src="../../year.js"></script>
 
         <script src="../spoilers.js"></script>
