--- a/revision/1-08-Merge-Sort/index.html
+++ b/revision/1-08-Merge-Sort/index.html
@@ -56,11 +56,11 @@
         </p>
 
         <p class="spoiler noselect">
-            <el class="default">Tap/click to reveal</el>
-            <el class="answer">
+            <span class="default">Tap/click to reveal</span>
+            <span class="answer">
                 Merge sort (with a worst case <b>time complexity</b> on the order of <code>O(n log n)</code>) is much more efficient than
                 bubble sort (worst case on the order of <code>O(n<sup>2</sup>)</code>), especially for larger lists.
-            </el>
+            </span>
         </p>
 
         <br />
@@ -74,7 +74,7 @@
         <br /> <br />
         <br /> <br />
 
-        <div id="sub">© Rujul Nayak <el id="year">2024-</el></div>
+        <div id="sub">© Rujul Nayak <span id="year">2024-</span></div>
         <script src="../../year.js"></script>
 
         <script src="../spoilers.js"></script>
