--- a/revision/1-Summary-Questions/index.html
+++ b/revision/1-Summary-Questions/index.html
@@ -34,11 +34,11 @@
         </p>
 
         <p class="spoiler noselect">
-            <el class="default">Tap/click to reveal</el>
-            <el class="answer">
+            <span class="default">Tap/click to reveal</span>
+            <span class="answer">
                 Breaking down a complex problem into smaller subtasks &check;
                 <br /> and solving each one individually &check;
-            </el>
+            </span>
         </p>
 
         <br />
@@ -51,10 +51,10 @@
             <img src="../icons/code.svg" class="icon" />
             Example 1 <br />
             <code>
-                height &larr; <el class="function">USERINPUT</el> <br />
-                width &larr; <el class="function">USERINPUT</el> <br />
+                height &larr; <span class="function">USERINPUT</span> <br />
+                width &larr; <span class="function">USERINPUT</span> <br />
                 area &larr; height * width <br />
-                <el class="function">OUTPUT</el> area
+                <span class="function">OUTPUT</span> area
             </code>
         </p>
 
@@ -64,12 +64,12 @@
         </p>
 
         <p class="spoiler noselect">
-            <el class="default">Tap/click to reveal</el>
-            <el class="answer">
+            <span class="default">Tap/click to reveal</span>
+            <span class="answer">
                 Takes in the height and width as input, &check;
                 <br /> multiplies them together, &check;
                 <br /> and outputs the resulting area &check;
-            </el>
+            </span>
         </p>
 
         <br />
@@ -84,17 +84,17 @@
         </p>
 
         <p class="spoiler noselect">
-            <el class="default">Tap/click to reveal</el>
-            <el class="answer pseudo-code">
+            <span class="default">Tap/click to reveal</span>
+            <span class="answer pseudo-code">
                 <code>
-                    number &larr; <el class="function">USERINPUT</el> &check; <br />
-                    <el class="keyword">IF</el> <el class="other">LEN</el>(number) = <el class="number">8</el> <el class="keyword">THEN</el> &check; <br />
-                    &nbsp; <el class="function">OUTPUT</el> <el class="string">&quot;Valid&quot;</el> &check; <br />
-                    <el class="keyword">ELSE</el> <br />
-                    &nbsp; <el class="function">OUTPUT</el> <el class="string">&quot;Invalid&quot;</el> &check; <br />
-                    <el class="keyword">ENDIF</el> &check;
+                    number &larr; <span class="function">USERINPUT</span> &check; <br />
+                    <span class="keyword">IF</span> <span class="other">LEN</span>(number) = <span class="number">8</span> <span class="keyword">THEN</span> &check; <br />
+                    &nbsp; <span class="function">OUTPUT</span> <span class="string">&quot;Valid&quot;</span> &check; <br />
+                    <span class="keyword">ELSE</span> <br />
+                    &nbsp; <span class="function">OUTPUT</span> <span class="string">&quot;Invalid&quot;</span> &check; <br />
+                    <span class="keyword">ENDIF</span> &check;
                 </code>
-            </el>
+            </span>
         </p>
 
         <br />
@@ -115,8 +115,8 @@
         </p>
 
         <p class="spoiler noselect">
-            <el class="default">Tap/click to reveal</el>
-            <el class="answer">There should be a box to input "miles" &check;</el>
+            <span class="default">Tap/click to reveal</span>
+            <span class="answer">There should be a box to input "miles" &check;</span>
         </p>
 
         <br />
@@ -129,10 +129,10 @@
         </p>
 
         <p class="spoiler noselect">
-            <el class="default">Tap/click to reveal</el>
-            <el class="answer">
+            <span class="default">Tap/click to reveal</span>
+            <span class="answer">
                 The list is not sorted &check;
-            </el>
+            </span>
         </p>
 
         <br />
@@ -145,12 +145,12 @@
         </p>
 
         <p class="spoiler noselect">
-            <el class="default">Tap/click to reveal</el>
-            <el class="answer">
+            <span class="default">Tap/click to reveal</span>
+            <span class="answer">
                 Compare "ford" to "mercedes" (the middle item). "ford" is smaller, so take only the left half &check;
                 <br /> Compare "ford" to "bmw" (the new middle item). "ford" is greater, so take only the right half &check;
                 <br /> Compare "ford" to "ford" (the new middle item). They are equal, so stop searching &check;
-            </el>
+            </span>
         </p>
 
         <br />
@@ -163,13 +163,13 @@
         </p>
 
         <p class="spoiler noselect">
-            <el class="default">Tap/click to reveal</el>
-            <el class="answer">
+            <span class="default">Tap/click to reveal</span>
+            <span class="answer">
                 In bubble sort, all the sorting is done on the original list &check;
                 <br /> and therefore bubble sort uses less memory than merge sort &check;
                 <br /> Merge sort always goes through the whole splitting and merging process, whereas bubble sort exits early once the list is sorted &check;
                 <br /> so bubble sort is quicker for lists which are nearly ordered already &check;
-            </el>
+            </span>
         </p>
 
         <br />
@@ -182,11 +182,11 @@
         </p>
 
         <p class="spoiler noselect">
-            <el class="default">Tap/click to reveal</el>
-            <el class="answer">
+            <span class="default">Tap/click to reveal</span>
+            <span class="answer">
                 Smaller lists are easier to sort than larger lists &check;
                 <br /> Ordered lists are easier to merge and sort than unordered lists &check;
-            </el>
+            </span>
         </p>
 
         <br />
@@ -200,7 +200,7 @@
         <br /> <br />
         <br /> <br />
 
-        <div id="sub">© Rujul Nayak <el id="year">2024-</el></div>
+        <div id="sub">© Rujul Nayak <span id="year">2024-</span></div>
         <script src="../../year.js"></script>
 
         <script src="../spoilers.js"></script>
