--- a/revision/2A-02-Data-Types/index.html
+++ b/revision/2A-02-Data-Types/index.html
@@ -99,10 +99,10 @@
             <img src="../icons/code.svg" class="icon" />
             Example 1 <br />
             <code>
-                <el class="other">INT_TO_STRING</el>(<el class="number">123</el>) &nbsp; &nbsp; <el class="comment">"123"</el> <br />
-                <el class="other">STRING_TO_INT</el>(<el class="string">&quot;123&quot;</el>) &nbsp; <el class="comment">123</el> <br />
-                <el class="other">REAL_TO_STRING</el>(<el class="number">1.23</el>) &nbsp; <el class="comment">"1.23"</el> <br />
-                <el class="other">STRING_TO_REAL</el>(<el class="string">&quot;1.23&quot;</el>) <el class="comment">1.23</el> <br />
+                <span class="other">INT_TO_STRING</span>(<span class="number">123</span>) &nbsp; &nbsp; <span class="comment">"123"</span> <br />
+                <span class="other">STRING_TO_INT</span>(<span class="string">&quot;123&quot;</span>) &nbsp; <span class="comment">123</span> <br />
+                <span class="other">REAL_TO_STRING</span>(<span class="number">1.23</span>) &nbsp; <span class="comment">"1.23"</span> <br />
+                <span class="other">STRING_TO_REAL</span>(<span class="string">&quot;1.23&quot;</span>) <span class="comment">1.23</span> <br />
             </code>
         </p>
 
@@ -110,10 +110,10 @@
             <img src="../icons/code.svg" class="icon" />
             Example 2 <br />
             <code>
-                <el class="other">str</el>(<el class="number">123</el>) &nbsp; &nbsp;&nbsp; <el class="comment">#&nbsp;"123"</el> <br />
-                <el class="other">int</el>(<el class="string">&quot;123&quot;</el>) &nbsp;&nbsp; <el class="comment">#&nbsp;123</el> <br />
-                <el class="other">str</el>(<el class="number">1.23</el>) &nbsp; &nbsp; <el class="comment">#&nbsp;"1.23"</el> <br />
-                <el class="other">float</el>(<el class="string">&quot;1.23&quot;</el>) <el class="comment">#&nbsp;1.23</el> <br />
+                <span class="other">str</span>(<span class="number">123</span>) &nbsp; &nbsp;&nbsp; <span class="comment">#&nbsp;"123"</span> <br />
+                <span class="other">int</span>(<span class="string">&quot;123&quot;</span>) &nbsp;&nbsp; <span class="comment">#&nbsp;123</span> <br />
+                <span class="other">str</span>(<span class="number">1.23</span>) &nbsp; &nbsp; <span class="comment">#&nbsp;"1.23"</span> <br />
+                <span class="other">float</span>(<span class="string">&quot;1.23&quot;</span>) <span class="comment">#&nbsp;1.23</span> <br />
             </code>
         </p>
 
@@ -127,10 +127,10 @@
         </p>
 
         <p class="spoiler noselect">
-            <el class="default">Tap/click to reveal</el>
-            <el class="answer">
+            <span class="default">Tap/click to reveal</span>
+            <span class="answer">
                 A boolean: it needs to evaluate to either True or False.
-            </el>
+            </span>
         </p>
 
         <br />
@@ -144,7 +144,7 @@
         <br /> <br />
         <br /> <br />
 
-        <div id="sub">© Rujul Nayak <el id="year">2024-</el></div>
+        <div id="sub">© Rujul Nayak <span id="year">2024-</span></div>
         <script src="../../year.js"></script>
 
         <script src="../spoilers.js"></script>
