--- a/revision/2A-03-Operations/index.html
+++ b/revision/2A-03-Operations/index.html
@@ -158,18 +158,18 @@
             </tr>
             <tr>
                 <td><code class="other">AND</code></td>
-                <td><code><el class="number">True</el> <el class="other">AND</el> <el class="number">True</el></code></td>
-                <td><code><el class="number">True</el> <el class="other">AND</el> <el class="number">False</el></code><br /><code><el class="number">False</el> <el class="other">AND</el> <el class="number">True</el></code><br /><code><el class="number">False</el> <el class="other">AND</el> <el class="number">False</el></code></td>
+                <td><code><span class="number">True</span> <span class="other">AND</span> <span class="number">True</span></code></td>
+                <td><code><span class="number">True</span> <span class="other">AND</span> <span class="number">False</span></code><br /><code><span class="number">False</span> <span class="other">AND</span> <span class="number">True</span></code><br /><code><span class="number">False</span> <span class="other">AND</span> <span class="number">False</span></code></td>
             </tr>
             <tr>
                 <td><code class="other">OR</code></td>
-                <td><code><el class="number">True</el> <el class="other">OR</el> <el class="number">True</el></code><br /><code><el class="number">True</el> <el class="other">OR</el> <el class="number">False</el></code><br /><code><el class="number">False</el> <el class="other">OR</el> <el class="number">True</el></code></td>
-                <td><code><el class="number">False</el> <el class="other">OR</el> <el class="number">False</el></code></td>
+                <td><code><span class="number">True</span> <span class="other">OR</span> <span class="number">True</span></code><br /><code><span class="number">True</span> <span class="other">OR</span> <span class="number">False</span></code><br /><code><span class="number">False</span> <span class="other">OR</span> <span class="number">True</span></code></td>
+                <td><code><span class="number">False</span> <span class="other">OR</span> <span class="number">False</span></code></td>
             </tr>
             <tr>
                 <td><code class="other">NOT</code></td>
-                <td><code><el class="other">NOT</el> <el class="number">False</el></code></td>
-                <td><code><el class="other">NOT</el> <el class="number">True</el></code>
+                <td><code><span class="other">NOT</span> <span class="number">False</span></code></td>
+                <td><code><span class="other">NOT</span> <span class="number">True</span></code>
             </tr>
         </table>
 
@@ -185,10 +185,10 @@
         </p>
 
         <p class="spoiler noselect">
-            <el class="default">Tap/click to reveal</el>
-            <el class="answer">
+            <span class="default">Tap/click to reveal</span>
+            <span class="answer">
                 False: this evaluates to <code>17 &lt; 15 + 2</code> which is <code>17 &lt; 17</code>.
-            </el>
+            </span>
         </p>
 
         <br />
@@ -202,7 +202,7 @@
         <br /> <br />
         <br /> <br />
 
-        <div id="sub">© Rujul Nayak <el id="year">2024-</el></div>
+        <div id="sub">© Rujul Nayak <span id="year">2024-</span></div>
         <script src="../../year.js"></script>
 
         <script src="../spoilers.js"></script>
