--- a/revision/2A-06-Random-Number-Generation/index.html
+++ b/revision/2A-06-Random-Number-Generation/index.html
@@ -26,7 +26,7 @@
 
         <p>Random numbers are often used in games when the programmer wants an unknown element in the code.</p>
 
-        <p>In pseudo-code we use <code><el class="other">RANDOM_INT</el>(x, y)</code> to generate a random integer from <code>x</code> to <code>y</code></p>
+        <p>In pseudo-code we use <code><span class="other">RANDOM_INT</span>(x, y)</code> to generate a random integer from <code>x</code> to <code>y</code></p>
 
         <p>Example 1 shows how the <code class="other">RANDOM_INT</code> function can be used to simulate rolling a die.</p>
 
@@ -34,8 +34,8 @@
             <img src="../icons/code.svg" class="icon" />
             Example 1 <br />
             <code>
-                num &larr; <el class="other">RANDOM_INT</el>(<el class="number">1</el>, <el class="number">6</el>) <br />
-                <el class="function">OUTPUT</el> num
+                num &larr; <span class="other">RANDOM_INT</span>(<span class="number">1</span>, <span class="number">6</span>) <br />
+                <span class="function">OUTPUT</span> num
             </code>
         </p>
 
@@ -45,9 +45,9 @@
             <img src="../icons/code.svg" class="icon" />
             Example 2 <br />
             <code>
-                coin = [<el class="string">&quot;Heads&quot;</el>, <el class="string">&quot;Tails&quot;</el>] <br />
-                num &larr; <el class="other">RANDOM_INT</el>(<el class="number">0</el>, <el class="number">1</el>) <br />
-                <el class="function">OUTPUT</el> coin[num]
+                coin = [<span class="string">&quot;Heads&quot;</span>, <span class="string">&quot;Tails&quot;</span>] <br />
+                num &larr; <span class="other">RANDOM_INT</span>(<span class="number">0</span>, <span class="number">1</span>) <br />
+                <span class="function">OUTPUT</span> coin[num]
             </code>
         </p>
 
@@ -61,10 +61,10 @@
         </p>
 
         <p class="spoiler noselect">
-            <el class="default">Tap/click to reveal</el>
-            <el class="answer">
-                <code><el class="other">RANDOM_INT</el>(<el class="number">1</el>, <el class="number">20</el>)</code>
-            </el>
+            <span class="default">Tap/click to reveal</span>
+            <span class="answer">
+                <code><span class="other">RANDOM_INT</span>(<span class="number">1</span>, <span class="number">20</span>)</code>
+            </span>
         </p>
 
         <br />
@@ -78,7 +78,7 @@
         <br /> <br />
         <br /> <br />
         
-        <div id="sub">© Rujul Nayak <el id="year">2024-</el></div>
+        <div id="sub">© Rujul Nayak <span id="year">2024-</span></div>
         <script src="../../year.js"></script>
 
         <script src="../spoilers.js"></script>
