--- a/revision/2A-08-Records/index.html
+++ b/revision/2A-08-Records/index.html
@@ -38,12 +38,12 @@
             <img src="../icons/code.svg" class="icon" />
             Example 1 <br />
             <code>
-                <el class="keyword">RECORD</el> film <br />
-                &ensp; name: <el class="other">STRING</el> <br />
-                &ensp; releaseYear: <el class="other">INT</el> <br />
-                &ensp; duration: <el class="other">INT</el> <br />
-                &ensp; rating: <el class="other">REAL</el> <br />
-                <el class="keyword">ENDRECORD</el>
+                <span class="keyword">RECORD</span> film <br />
+                &ensp; name: <span class="other">STRING</span> <br />
+                &ensp; releaseYear: <span class="other">INT</span> <br />
+                &ensp; duration: <span class="other">INT</span> <br />
+                &ensp; rating: <span class="other">REAL</span> <br />
+                <span class="keyword">ENDRECORD</span>
             </code>
         </p>
 
@@ -53,10 +53,10 @@
             <img src="../icons/code.svg" class="icon" />
             Example 2 <br />
             <code>
-                film.name &larr; <el class="string">&quot;Avengers: Endgame&quot;</el> <br />
-                film.releaseYear &larr; <el class="number">2019</el> <br />
-                film.duration &larr; <el class="number">182</el> <br />
-                film.rating &larr; <el class="number">8.4</el> <br />
+                film.name &larr; <span class="string">&quot;Avengers: Endgame&quot;</span> <br />
+                film.releaseYear &larr; <span class="number">2019</span> <br />
+                film.duration &larr; <span class="number">182</span> <br />
+                film.rating &larr; <span class="number">8.4</span> <br />
             </code>
         </p>
 
@@ -66,20 +66,20 @@
             <img src="../icons/code.svg" class="icon" />
             Example 3 <br />
             <code>
-                <el class="function">OUTPUT</el> film <br />
-                <el class="comment">>>>
+                <span class="function">OUTPUT</span> film <br />
+                <span class="comment">>>>
                     {name:&nbsp;"Avengers:&nbsp;Endgame", <br />
                     &nbsp;&nbsp; &nbsp; releaseYear:&nbsp;2019, <br />
                     &nbsp;&nbsp; &nbsp; duration:&nbsp;182, <br />
                     &nbsp;&nbsp; &nbsp; rating:&nbsp;8.4}
-                </el> <br />
+                </span> <br />
                 <br />
-                <el class="function">OUTPUT</el> film.rating <br />
-                <el class="comment">>>> 8.4</el> <br />
+                <span class="function">OUTPUT</span> film.rating <br />
+                <span class="comment">>>> 8.4</span> <br />
                 <br />
-                film.rating &larr; <el class="number">8.3</el> <br />
-                <el class="function">OUTPUT</el> film.rating <br />
-                <el class="comment">>>> 8.3</el>
+                film.rating &larr; <span class="number">8.3</span> <br />
+                <span class="function">OUTPUT</span> film.rating <br />
+                <span class="comment">>>> 8.3</span>
             </code>
         </p>
 
@@ -93,10 +93,10 @@
         </p>
 
         <p class="spoiler noselect">
-            <el class="default">Tap/click to reveal</el>
-            <el class="answer">
+            <span class="default">Tap/click to reveal</span>
+            <span class="answer">
                 The <code>rating</code> attribute needs to be of the <code>REAL</code> type, but <code>"8.5"</code> is a string.
-            </el>
+            </span>
         </p>
 
         <br />
@@ -110,7 +110,7 @@
         <br /> <br />
         <br /> <br />
 
-        <div id="sub">© Rujul Nayak <el id="year">2024-</el></div>
+        <div id="sub">© Rujul Nayak <span id="year">2024-</span></div>
         <script src="../../year.js"></script>
 
         <script src="../spoilers.js"></script>
