--- a/revision/2A-09-Files/index.html
+++ b/revision/2A-09-Files/index.html
@@ -32,12 +32,12 @@
             <img src="../icons/code.svg" class="icon" />
             Example 1 <br />
             <code>
-                file &larr; <el class="other">OPENREAD</el>(<el class="string">&quot;students.txt&quot;</el>) <br />
-                <el class="keyword">FOR</el> n &larr; <el class="number">0</el> <el class="keyword">TO</el> <el class="other">LEN</el>(file)-<el class="number">1</el> <br />
-                &ensp; line &larr; file.<el class="other">READLINE</el>() <br />
-                &ensp; <el class="function">OUTPUT</el> line <br />
-                <el class="keyword">ENDFOR</el> <br />
-                file.<el class="other">CLOSE</el>()
+                file &larr; <span class="other">OPENREAD</span>(<span class="string">&quot;students.txt&quot;</span>) <br />
+                <span class="keyword">FOR</span> n &larr; <span class="number">0</span> <span class="keyword">TO</span> <span class="other">LEN</span>(file)-<span class="number">1</span> <br />
+                &ensp; line &larr; file.<span class="other">READLINE</span>() <br />
+                &ensp; <span class="function">OUTPUT</span> line <br />
+                <span class="keyword">ENDFOR</span> <br />
+                file.<span class="other">CLOSE</span>()
             </code>
         </p>
 
@@ -47,12 +47,12 @@
             <img src="../icons/code.svg" class="icon" />
             Example 2 <br />
             <code>
-                file &larr; <el class="other">OPENWRITE</el>(<el class="string">&quot;students.txt&quot;</el>) <br />
-                <el class="keyword">FOR</el> n &larr; <el class="number">0</el> <el class="keyword">TO</el> <el class="number">9</el> <br />
-                &ensp; name &larr; <el class="function">USERINPUT</el> <br />
-                &ensp; file.<el class="other">WRITELINE</el>(name) <br />
-                <el class="keyword">ENDFOR</el> <br />
-                file.<el class="other">CLOSE</el>()
+                file &larr; <span class="other">OPENWRITE</span>(<span class="string">&quot;students.txt&quot;</span>) <br />
+                <span class="keyword">FOR</span> n &larr; <span class="number">0</span> <span class="keyword">TO</span> <span class="number">9</span> <br />
+                &ensp; name &larr; <span class="function">USERINPUT</span> <br />
+                &ensp; file.<span class="other">WRITELINE</span>(name) <br />
+                <span class="keyword">ENDFOR</span> <br />
+                file.<span class="other">CLOSE</span>()
             </code>
         </p>
 
@@ -70,10 +70,10 @@
         </p>
 
         <p class="spoiler noselect">
-            <el class="default">Tap/click to reveal</el>
-            <el class="answer">
+            <span class="default">Tap/click to reveal</span>
+            <span class="answer">
                 They need more string processing and manipulation when reading and writing.
-            </el>
+            </span>
         </p>
 
         <br />
@@ -87,7 +87,7 @@
         <br /> <br />
         <br /> <br />
 
-        <div id="sub">© Rujul Nayak <el id="year">2024-</el></div>
+        <div id="sub">© Rujul Nayak <span id="year">2024-</span></div>
         <script src="../../year.js"></script>
 
         <script src="../spoilers.js"></script>
