--- a/revision/2A-Summary-Questions/index.html
+++ b/revision/2A-Summary-Questions/index.html
@@ -68,14 +68,14 @@
         </p>
 
         <p class="spoiler noselect">
-            <el class="default">Tap/click to reveal</el>
-            <el class="answer">
+            <span class="default">Tap/click to reveal</span>
+            <span class="answer">
                 Name: &nbsp; <b>String</b> &check; &nbsp; (names are collections of characters) <br />
                 Age: &nbsp; <b>Integer</b> &check; &nbsp; (an age is usuall represented as a whole number) <br />
                 Height: &nbsp; <b>Float / Real</b> &check; &nbsp; (height in metres is usually a number with a decimal part) <br />
                 Phone number: &nbsp; <b>String</b> &check; &nbsp; (phone numbers start with a 0, which would not be possible to represent as an integer) <br />
                 Employed?: &nbsp; <b>Boolean</b> &check; &nbsp; (there are only two possible options here: true or false)
-            </el>
+            </span>
         </p>
 
         <br />
@@ -85,19 +85,19 @@
         <p class="question">
             <img src="../icons/question.svg" class="icon" />
             Which of the following can be changed as a program runs? [1] <br />
-            <el class="small-code">
+            <span class="small-code">
                 &nbsp; (a) The data type of a variable <br />
                 &nbsp; (b) The data type of a constant <br />
                 &nbsp; (c) The value of a variable <br />
                 &nbsp; (d) The value of a constant
-            </el>
+            </span>
         </p>
 
         <p class="spoiler noselect">
-            <el class="default">Tap/click to reveal</el>
-            <el class="answer">
+            <span class="default">Tap/click to reveal</span>
+            <span class="answer">
                 (c) The value of a variable &check;
-            </el>
+            </span>
         </p>
 
         <br />
@@ -110,10 +110,10 @@
             <img src="../icons/code.svg" class="icon" />
             Example 1 <br />
             <code>
-                date &larr; <el class="string" id="js-target-1">&quot;Thu, 1 Jan 1970&quot;</el> <br />
-                <el class="function">OUTPUT</el> <el class="other">LEN</el>(date) <br />
-                <el class="function">OUTPUT</el> <el class="other">POSITION</el>(date, <el class="string" id="js-target-2">'a'</el>) <br />
-                <el class="function">OUTPUT</el> <el class="other">SUBSTRING</el>(<el class="number" id="js-target-3">1</el>, <el class="number" id="js-target-4">7</el>, date)
+                date &larr; <span class="string" id="js-target-1">&quot;Thu, 1 Jan 1970&quot;</span> <br />
+                <span class="function">OUTPUT</span> <span class="other">LEN</span>(date) <br />
+                <span class="function">OUTPUT</span> <span class="other">POSITION</span>(date, <span class="string" id="js-target-2">'a'</span>) <br />
+                <span class="function">OUTPUT</span> <span class="other">SUBSTRING</span>(<span class="number" id="js-target-3">1</span>, <span class="number" id="js-target-4">7</span>, date)
             </code>
         </p>
 
@@ -123,12 +123,12 @@
         </p>
 
         <p class="spoiler noselect">
-            <el class="default">Tap/click to reveal</el>
-            <el class="answer">
-                <el class="number" id="js-target-5">15</el> &check; <br />
-                <el class="number" id="js-target-6">8</el> &check; <br />
-                <el class="string" id="js-target-7">&quot;hu, 1 J&quot;</el> &check;
-            </el>
+            <span class="default">Tap/click to reveal</span>
+            <span class="answer">
+                <span class="number" id="js-target-5">15</span> &check; <br />
+                <span class="number" id="js-target-6">8</span> &check; <br />
+                <span class="string" id="js-target-7">&quot;hu, 1 J&quot;</span> &check;
+            </span>
         </p>
 
         <br />
@@ -141,10 +141,10 @@
         </p>
 
         <p class="spoiler noselect">
-            <el class="default">Tap/click to reveal</el>
-            <el class="answer">
+            <span class="default">Tap/click to reveal</span>
+            <span class="answer">
                 False &check;
-            </el>
+            </span>
         </p>
 
         <br />
@@ -157,14 +157,14 @@
         </p>
 
         <p class="spoiler noselect">
-            <el class="default">Tap/click to reveal</el>
-            <el class="answer">
+            <span class="default">Tap/click to reveal</span>
+            <span class="answer">
                 Any two from: <br />
                 - So that the game is different every time it is played &check; <br />
                 - To simulate something that is random in real life &check; <br />
                 - So that the game is unpredictable and challenging &check; <br />
                 - [Other valid answers] &check;
-            </el>
+            </span>
         </p>
 
         <br />
@@ -177,10 +177,10 @@
         </p>
 
         <p class="spoiler noselect">
-            <el class="default">Tap/click to reveal</el>
-            <el class="answer">
+            <span class="default">Tap/click to reveal</span>
+            <span class="answer">
                 Because the data is split by two categories: in each event there is a list of three athletes to store. &check;
-            </el>
+            </span>
         </p>
 
         <br />
@@ -194,7 +194,7 @@
         <br /> <br />
         <br /> <br />
 
-        <div id="sub">© Rujul Nayak <el id="year">2024-</el></div>
+        <div id="sub">© Rujul Nayak <span id="year">2024-</span></div>
         <script src="../../year.js"></script>
 
         <script src="../spoilers.js"></script>
