--- a/revision/2B-02-Local-and-Global-Variables/index.html
+++ b/revision/2B-02-Local-and-Global-Variables/index.html
@@ -45,23 +45,23 @@
             <img src="../icons/code.svg" class="icon" />
             Example 1 <br />
             <code>
-                <el class="keyword">GLOABL</el> x = <el class="number">0</el> <br />
-                <el class="keyword">GLOABL</el> y = <el class="number">0</el> <br />
+                <span class="keyword">GLOABL</span> x = <span class="number">0</span> <br />
+                <span class="keyword">GLOABL</span> y = <span class="number">0</span> <br />
                 <br />
-                <el class="keyword">SUBROUTINE</el> <el class="other">move</el>(p, q) <br />
+                <span class="keyword">SUBROUTINE</span> <span class="other">move</span>(p, q) <br />
                 &ensp; x &larr; x + p <br />
                 &ensp; y &larr; y + q <br />
-                <el class="keyword">ENDSUBROUTINE</el> <br />
+                <span class="keyword">ENDSUBROUTINE</span> <br />
                 <br />
-                <el class="other">move</el>(<el class="number">2</el>, <el class="number">6</el>) <br />
-                <el class="other">move</el>(<el class="number">4</el>, <el class="number">1</el>) <br />
+                <span class="other">move</span>(<span class="number">2</span>, <span class="number">6</span>) <br />
+                <span class="other">move</span>(<span class="number">4</span>, <span class="number">1</span>) <br />
                 <br />
-                <el class="function">OUTPUT</el> x <br />
-                <el class="function">OUTPUT</el> y
+                <span class="function">OUTPUT</span> x <br />
+                <span class="function">OUTPUT</span> y
             </code>
         </p>
 
-        <p>The outputs of this program are <el class="number">6</el> and <el class="number">7</el>.</p>
+        <p>The outputs of this program are <span class="number">6</span> and <span class="number">7</span>.</p>
 
         <p>
             <code>x</code> and <code>y</code> are global variables: they are used throughout the program. <br />
@@ -78,11 +78,11 @@
         </p>
 
         <p class="spoiler noselect">
-            <el class="default">Tap/click to reveal</el>
-            <el class="answer">
+            <span class="default">Tap/click to reveal</span>
+            <span class="answer">
                 It might save memory, because local variables are removed from memory after the subroutine that they are in has finished. <br />
                 It could also lead to less name clashes, where two variables are called the same thing, because two local variables can have the same name if they have different scopes.
-            </el>
+            </span>
         </p>
 
         <br />
@@ -96,7 +96,7 @@
         <br /> <br />
         <br /> <br />
 
-        <div id="sub">© Rujul Nayak <el id="year">2024-</el></div>
+        <div id="sub">© Rujul Nayak <span id="year">2024-</span></div>
         <script src="../../year.js"></script>
 
         <script src="../spoilers.js"></script>
