--- a/revision/2B-03-Structured-Programming/index.html
+++ b/revision/2B-03-Structured-Programming/index.html
@@ -49,8 +49,8 @@
         </p>
 
         <p class="spoiler noselect">
-            <el class="default">Tap/click to reveal</el>
-            <el class="answer">
+            <span class="default">Tap/click to reveal</span>
+            <span class="answer">
                 Adding well written, clear comments to explain the key features of a program <!-- *cough* *cough*
                     https://github.com/Thunno/Thunno2/blob/main/src/thunno2/helpers.py
                     (no comments in a 3000+ line file) -->
@@ -58,7 +58,7 @@
                 Using meaningful identifiers for variables and constants <!-- *cough* *cough*
                     https://github.com/Thunno/Thunno2/blob/main/src/thunno2/helpers.py
                     (109 uses of the variable name `i`) -->
-            </el>
+            </span>
         </p>
 
         <br />
@@ -72,7 +72,7 @@
         <br /> <br />
         <br /> <br />
 
-        <div id="sub">© Rujul Nayak <el id="year">2024-</el></div>
+        <div id="sub">© Rujul Nayak <span id="year">2024-</span></div>
         <script src="../../year.js"></script>
 
         <script src="../spoilers.js"></script>
