--- a/revision/2B-05-Errors/index.html
+++ b/revision/2B-05-Errors/index.html
@@ -44,7 +44,7 @@
             <img src="../icons/code.svg" class="icon" />
             Example 1 <br />
             <code>
-                <el class="function">print</el> <el class="string">&quot;Hello, World!&quot;</el>
+                <span class="function">print</span> <span class="string">&quot;Hello, World!&quot;</span>
             </code>
         </p>
 
@@ -56,11 +56,11 @@
             <img src="../icons/code.svg" class="icon" />
             Example 2 <br />
             <code>
-                <el class="error">
+                <span class="error">
                     &ensp; &ensp; print &quot;Hello, World!&quot; <br />
                     &ensp; &ensp; &ensp; &ensp;&ensp; ^^ <br />
                     SyntaxError: invalid syntax
-                </el>
+                </span>
             </code>
         </p>
 
@@ -77,12 +77,12 @@
             <img src="../icons/code.svg" class="icon" />
             Example 3 <br />
             <code>
-                inp = <el class="function">input</el>(<el class="string">&quot;Quit (y/n)? &quot;</el>) <br />
-                <el class="keyword">if</el> inp == <el class="string">&quot;n&quot;</el>: <br />
-                &ensp; <el class="function">print</el>(<el class="string">&quot;Bye!&quot;</el>) <br />
-                &ensp; <el class="other">quit</el>() <br />
-                <el class="keyword">else</el>: <br />
-                &ensp; <el class="other">play</el>()
+                inp = <span class="function">input</span>(<span class="string">&quot;Quit (y/n)? &quot;</span>) <br />
+                <span class="keyword">if</span> inp == <span class="string">&quot;n&quot;</span>: <br />
+                &ensp; <span class="function">print</span>(<span class="string">&quot;Bye!&quot;</span>) <br />
+                &ensp; <span class="other">quit</span>() <br />
+                <span class="keyword">else</span>: <br />
+                &ensp; <span class="other">play</span>()
             </code>
         </p>
 
@@ -94,7 +94,7 @@
             <img src="../icons/code.svg" class="icon" />
             Example 4 <br />
             <code>
-                Quit (y/n)? <el class="function">n</el> <br />
+                Quit (y/n)? <span class="function">n</span> <br />
                 Bye!
             </code>
         </p>
@@ -111,11 +111,11 @@
         </p>
 
         <p class="spoiler noselect">
-            <el class="default">Tap/click to reveal</el>
-            <el class="answer">
+            <span class="default">Tap/click to reveal</span>
+            <span class="answer">
                 Logic error - the compiler/interpreter will tell you exactly where a syntax error is,
                 but it won't know if there is a logic error.
-            </el>
+            </span>
         </p>
 
         <br />
@@ -129,7 +129,7 @@
         <br /> <br />
         <br /> <br />
 
-        <div id="sub">© Rujul Nayak <el id="year">2024-</el></div>
+        <div id="sub">© Rujul Nayak <span id="year">2024-</span></div>
         <script src="../../year.js"></script>
 
         <script src="../spoilers.js"></script>
