--- a/revision/2B-07-Programming-Language-Classification/index.html
+++ b/revision/2B-07-Programming-Language-Classification/index.html
@@ -48,8 +48,8 @@
             <img src="../icons/code.svg" class="icon" />
             Example 1 <br />
             <code>
-                a = <el class="other">int</el>(<el class="function">input</el>()) <br />
-                <el class="function">print</el>(a * a)
+                a = <span class="other">int</span>(<span class="function">input</span>()) <br />
+                <span class="function">print</span>(a * a)
             </code>
         </p>
 
@@ -57,12 +57,12 @@
             <img src="../icons/code.svg" class="icon" />
             Example 2 <br />
             <code>
-                &ensp; <el class="keyword">mov</el> al, <el class="number">0</el> <br />
-                &ensp; <el class="keyword">mov</el> bl, <el class="function">[num]</el> <br />
-                <el class="other">mult</el>: <br />
-                &ensp; <el class="keyword">add</el> al, <el class="function">[num]</el> <br />
-                &ensp; <el class="keyword">dec</el> bl <br />
-                &ensp; <el class="keyword">jnz</el> <el class="other">mult</el> <br />
+                &ensp; <span class="keyword">mov</span> al, <span class="number">0</span> <br />
+                &ensp; <span class="keyword">mov</span> bl, <span class="function">[num]</span> <br />
+                <span class="other">mult</span>: <br />
+                &ensp; <span class="keyword">add</span> al, <span class="function">[num]</span> <br />
+                &ensp; <span class="keyword">dec</span> bl <br />
+                &ensp; <span class="keyword">jnz</span> <span class="other">mult</span> <br />
             </code>
         </p>
 
@@ -70,9 +70,9 @@
             <img src="../icons/code.svg" class="icon" />
             Example 3 <br />
             <code>
-                <el class="number">
+                <span class="number">
                     10110000 00000000 10001010 00011101 00000000 00000000 00000000 00000000 00000010 00000101 00000000 00000000 00000000 00000000 11111110 11001011 01110101 11110110
-                </el>
+                </span>
             </code>
         </p>
 
@@ -129,10 +129,10 @@
         </p>
 
         <p class="spoiler noselect">
-            <el class="default">Tap/click to reveal</el>
-            <el class="answer">
+            <span class="default">Tap/click to reveal</span>
+            <span class="answer">
                 Assembly language resembles English more closely than machine code, and is therefore easier to program in.
-            </el>
+            </span>
         </p>
 
         <br />
@@ -146,7 +146,7 @@
         <br /> <br />
         <br /> <br />
 
-        <div id="sub">© Rujul Nayak <el id="year">2024-</el></div>
+        <div id="sub">© Rujul Nayak <span id="year">2024-</span></div>
         <script src="../../year.js"></script>
 
         <script src="../spoilers.js"></script>
