--- a/revision/2B-08-Translators/index.html
+++ b/revision/2B-08-Translators/index.html
@@ -109,13 +109,13 @@
         </p>
 
         <p class="spoiler noselect">
-            <el class="default">Tap/click to reveal</el>
-            <el class="answer">
+            <span class="default">Tap/click to reveal</span>
+            <span class="answer">
                 Compiler: <br />
                 - Customers will not need to have the translator installed on their computer <br />
                 - Other people will not be able to see and copy the source code <br />
                 - The program will execute faster as it is in machine code
-            </el>
+            </span>
         </p>
 
         <br />
@@ -129,7 +129,7 @@
         <br /> <br />
         <br /> <br />
 
-        <div id="sub">© Rujul Nayak <el id="year">2024-</el></div>
+        <div id="sub">© Rujul Nayak <span id="year">2024-</span></div>
         <script src="../../year.js"></script>
 
         <script src="../spoilers.js"></script>
