--- a/revision/2B-Summary-Questions/index.html
+++ b/revision/2B-Summary-Questions/index.html
@@ -34,12 +34,12 @@
         </p>
 
         <p class="spoiler noselect">
-            <el class="default">Tap/click to reveal</el>
-            <el class="answer">
+            <span class="default">Tap/click to reveal</span>
+            <span class="answer">
                 Breaking down the main program into smaller, manageable modules, &check; <br />
                 and designing, coding, and testing each module separately &check; <br />
                 before putting it all back together. &check;
-            </el>
+            </span>
         </p>
 
         <br />
@@ -52,8 +52,8 @@
         </p>
 
         <p class="spoiler noselect">
-            <el class="default">Tap/click to reveal</el>
-            <el class="answer">
+            <span class="default">Tap/click to reveal</span>
+            <span class="answer">
                 Any two checks named and explained from: <br />
                 <br />
                 - Presence check &check; <br />
@@ -64,7 +64,7 @@
                 &ensp; to see if the postcode is between 5 and 7 characters &check; <br />
                 - Format check &check; <br />
                 &ensp; to see if the postcode ends with a number and two letters &check; <br />
-            </el>
+            </span>
         </p>
 
         <br />
@@ -77,12 +77,12 @@
         </p>
 
         <p class="spoiler noselect">
-            <el class="default">Tap/click to reveal</el>
-            <el class="answer">
+            <span class="default">Tap/click to reveal</span>
+            <span class="answer">
                 A good test plan will check most of the possible paths of the program. &check; <br />
                 It should test normal, boundary, and erroneous data. &check; <br />
                 If any of the outputs are not equal to the expected output, there is a logic error. &check;
-            </el>
+            </span>
         </p>
 
         <br />
@@ -95,8 +95,8 @@
         </p>
 
         <p class="spoiler noselect">
-            <el class="default">Tap/click to reveal</el>
-            <el class="answer">
+            <span class="default">Tap/click to reveal</span>
+            <span class="answer">
                 Any two advantages described and explained from: <br />
                 <br />
                 - Low-level languages have more control over the hardware &check; <br />
@@ -105,7 +105,7 @@
                 &ensp; so programs in low-level languages generally execute faster and use less memory than programs in high-level languages &check; <br />
                 - Commands in machine code can be executed directly by the computer &check; <br />
                 &ensp; so a translator is not required &check;
-            </el>
+            </span>
         </p>
 
         <br />
@@ -118,13 +118,13 @@
         </p>
 
         <p class="spoiler noselect">
-            <el class="default">Tap/click to reveal</el>
-            <el class="answer">
+            <span class="default">Tap/click to reveal</span>
+            <span class="answer">
                 The interpreter reads in the file statement by statement. &check; <br />
                 It calls machine code subroutines to carry out commands. &check; <br />
                 The interpreter stops if it finds a runtime error &check; <br />
                 No machine code is outputted by the interpreter so the program needs to be translated each time it is executed. &check;
-            </el>
+            </span>
         </p>
 
         <br />
@@ -138,7 +138,7 @@
         <br /> <br />
         <br /> <br />
 
-        <div id="sub">© Rujul Nayak <el id="year">2024-</el></div>
+        <div id="sub">© Rujul Nayak <span id="year">2024-</span></div>
         <script src="../../year.js"></script>
 
         <script src="../spoilers.js"></script>
