--- a/revision/3-02-Binary-and-Hexadecimal/index.html
+++ b/revision/3-02-Binary-and-Hexadecimal/index.html
@@ -81,13 +81,13 @@
         </p>
 
         <p class="spoiler noselect">
-            <el class="default">Tap/click to reveal</el>
-            <el class="answer">
+            <span class="default">Tap/click to reveal</span>
+            <span class="answer">
                 Because each hexadecimal digit is equivalent to a nibble, we can convert each digit to four binary digits: <br />
                 &nbsp;<code>9<sub>16</sub></code> = <code>9<sub>10</sub></code> = 8 + 1 = <code>1001<sub>2</sub></code> <br />
                 &nbsp;<code>D<sub>16</sub></code> = <code>13<sub>10</sub></code> = 8 + 4 + 1 = <code>1101<sub>2</sub></code> <br />
                 So, <code>9D<sub>16</sub></code> = <code>10011101<sub>2</sub></code>
-            </el>
+            </span>
         </p>
 
         <br />
@@ -96,7 +96,7 @@
 
         <br /> <br />
 
-        <div id="sub">© Rujul Nayak <el id="year">2024-</el></div>
+        <div id="sub">© Rujul Nayak <span id="year">2024-</span></div>
         <script src="../../year.js"></script>
 
         <script src="../spoilers.js"></script>
