--- a/revision/1-01-Computational-Thinking/index.html
+++ b/revision/1-01-Computational-Thinking/index.html
@@ -68,8 +68,8 @@
         </p>
 
         <p class="spoiler noselect">
-            <el class="default">Tap/click to reveal</el>
-            <el class="answer">The problem becomes easier to solve when it consists of a number of smaller subtasks.</el>
+            <span class="default">Tap/click to reveal</span>
+            <span class="answer">The problem becomes easier to solve when it consists of a number of smaller subtasks.</span>
         </p>
 
         <br />
@@ -83,7 +83,7 @@
         <br /> <br />
         <br /> <br />
 
-        <div id="sub">© Rujul Nayak <el id="year">2024-</el></div>
+        <div id="sub">© Rujul Nayak <span id="year">2024-</span></div>
         <script src="../../year.js"></script>
 
         <script src="../spoilers.js"></script>
