--- a/revision/1-05-Binary-Search/index.html
+++ b/revision/1-05-Binary-Search/index.html
@@ -60,8 +60,8 @@
         </p>
 
         <p class="spoiler noselect">
-            <el class="default">Tap/click to reveal</el>
-            <el class="answer">&LeftCeiling;<code>log<sub>2</sub>n</code>&RightCeiling; comparisons (if the item isn't in the list). This means that the worst-case <b>time complexity</b> of binary search is <code>O(log n)</code>.</el>
+            <span class="default">Tap/click to reveal</span>
+            <span class="answer">&LeftCeiling;<code>log<sub>2</sub>n</code>&RightCeiling; comparisons (if the item isn't in the list). This means that the worst-case <b>time complexity</b> of binary search is <code>O(log n)</code>.</span>
         </p>
 
         <br />
@@ -75,7 +75,7 @@
         <br /> <br />
         <br /> <br />
 
-        <div id="sub">© Rujul Nayak <el id="year">2024-</el></div>
+        <div id="sub">© Rujul Nayak <span id="year">2024-</span></div>
         <script src="../../year.js"></script>
 
         <script src="../spoilers.js"></script>
