--- a/revision/1-06-Searching-Algorithms-Comparison/index.html
+++ b/revision/1-06-Searching-Algorithms-Comparison/index.html
@@ -72,8 +72,8 @@
         </p>
 
         <p class="spoiler noselect">
-            <el class="default">Tap/click to reveal</el>
-            <el class="answer">13 for linear search (because 89 is the 13<sup>th</sup> item in the list) and 4 for binary search (53, 84, 93, 89).</el>
+            <span class="default">Tap/click to reveal</span>
+            <span class="answer">13 for linear search (because 89 is the 13<sup>th</sup> item in the list) and 4 for binary search (53, 84, 93, 89).</span>
         </p>
 
         <br />
@@ -87,7 +87,7 @@
         <br /> <br />
         <br /> <br />
 
-        <div id="sub">© Rujul Nayak <el id="year">2024-</el></div>
+        <div id="sub">© Rujul Nayak <span id="year">2024-</span></div>
         <script src="../../year.js"></script>
 
         <script src="../spoilers.js"></script>
