--- a/revision/1-09-Sorting-Algorithms-Comparison/index.html
+++ b/revision/1-09-Sorting-Algorithms-Comparison/index.html
@@ -77,11 +77,11 @@
         </p>
 
         <p class="spoiler noselect">
-            <el class="default">Tap/click to reveal</el>
-            <el class="answer">
+            <span class="default">Tap/click to reveal</span>
+            <span class="answer">
                 Merge sort: it will always do exactly the same steps, even if the list is already sorted,
                 whereas bubble sort will only go through one pass if it receives a sorted list.
-            </el>
+            </span>
         </p>
 
         <br />
@@ -95,7 +95,7 @@
         <br /> <br />
         <br /> <br />
 
-        <div id="sub">© Rujul Nayak <el id="year">2024-</el></div>
+        <div id="sub">© Rujul Nayak <span id="year">2024-</span></div>
         <script src="../../year.js"></script>
 
         <script src="../spoilers.js"></script>
