--- a/revision/2A-01-Variables/index.html
+++ b/revision/2A-01-Variables/index.html
@@ -64,10 +64,10 @@
         </p>
 
         <p class="spoiler noselect">
-            <el class="default">Tap/click to reveal</el>
-            <el class="answer">
+            <span class="default">Tap/click to reveal</span>
+            <span class="answer">
                 <code>number</code> is more meaningful than <code>n</code>, and so would be preferred.
-            </el>
+            </span>
         </p>
 
         <br />
@@ -81,7 +81,7 @@
         <br /> <br />
         <br /> <br />
 
-        <div id="sub">© Rujul Nayak <el id="year">2024-</el></div>
+        <div id="sub">© Rujul Nayak <span id="year">2024-</span></div>
         <script src="../../year.js"></script>
 
         <script src="../spoilers.js"></script>
