--- a/revision/2A-05-Arrays/index.html
+++ b/revision/2A-05-Arrays/index.html
@@ -44,23 +44,23 @@
             <img src="../icons/code.svg" class="icon" />
             Example 1 <br />
             <code>
-                <el class="comment">Use square brackets to define an array</el> <br />
-                names &larr; [<el class="string">&quot;Adam&quot;</el>, <el class="string">&quot;Bob&quot;</el>, <el class="string">&quot;Charlie&quot;</el>, <el class="string">&quot;Daniel&quot;</el>] <br />
+                <span class="comment">Use square brackets to define an array</span> <br />
+                names &larr; [<span class="string">&quot;Adam&quot;</span>, <span class="string">&quot;Bob&quot;</span>, <span class="string">&quot;Charlie&quot;</span>, <span class="string">&quot;Daniel&quot;</span>] <br />
                 <br />
-                <el class="comment">Elements in arrays can be retrieved just like characters in strings</el> <br />
-                <el class="function">OUTPUT</el> names[<el class="number">2</el>] <br />
-                <el class="comment">>>> &quot;Charlie&quot;</el> <br />
+                <span class="comment">Elements in arrays can be retrieved just like characters in strings</span> <br />
+                <span class="function">OUTPUT</span> names[<span class="number">2</span>] <br />
+                <span class="comment">>>> &quot;Charlie&quot;</span> <br />
                 <br />
-                <el class="comment">Remember: indexing starts at 0</el> <br />
+                <span class="comment">Remember: indexing starts at 0</span> <br />
                 <br />
-                <el class="comment">Elements can be changed as well</el> <br />
-                names[<el class="number">1</el>] = <el class="string">&quot;Ben&quot;</el> <br />
-                <el class="function">OUTPUT</el> names <br />
-                <el class="comment">>>> [&quot;Adam&quot;, &quot;Ben&quot;, &quot;Charlie&quot;, &quot;Daniel&quot;]</el> <br />
+                <span class="comment">Elements can be changed as well</span> <br />
+                names[<span class="number">1</span>] = <span class="string">&quot;Ben&quot;</span> <br />
+                <span class="function">OUTPUT</span> names <br />
+                <span class="comment">>>> [&quot;Adam&quot;, &quot;Ben&quot;, &quot;Charlie&quot;, &quot;Daniel&quot;]</span> <br />
                 <br />
-                <el class="comment">Just like with strings, LEN returns the length of an array</el> <br />
-                <el class="function">OUTPUT</el> <el class="other">LEN</el>(names) <br />
-                <el class="comment">>>> 4</el>
+                <span class="comment">Just like with strings, LEN returns the length of an array</span> <br />
+                <span class="function">OUTPUT</span> <span class="other">LEN</span>(names) <br />
+                <span class="comment">>>> 4</span>
             </code>
         </p>
 
@@ -72,29 +72,29 @@
             <img src="../icons/code.svg" class="icon" />
             Example 2 <br />
             <code>
-                <el class="comment">Five students' Maths and English scores are shown in this 2D array</el> <br />
-                <el class="comment">Each array inside this 2D array contains a certain student's two test scores</el> <br />
-                scores &larr; [[<el class="number">9</el>, <el class="number">15</el>],
-                               [<el class="number">18</el>, <el class="number">8</el>],
-                               [<el class="number">12</el>, <el class="number">14</el>],
-                               [<el class="number">13</el>, <el class="number">7</el>],
-                               [<el class="number">10</el>, <el class="number">17</el>]] <br />
+                <span class="comment">Five students' Maths and English scores are shown in this 2D array</span> <br />
+                <span class="comment">Each array inside this 2D array contains a certain student's two test scores</span> <br />
+                scores &larr; [[<span class="number">9</span>, <span class="number">15</span>],
+                               [<span class="number">18</span>, <span class="number">8</span>],
+                               [<span class="number">12</span>, <span class="number">14</span>],
+                               [<span class="number">13</span>, <span class="number">7</span>],
+                               [<span class="number">10</span>, <span class="number">17</span>]] <br />
                 <br />
-                <el class="comment">Retrieve the fourth student's scores</el> <br />
-                <el class="function">OUTPUT</el> scores[<el class="number">3</el>] <br />
-                <el class="comment">>>> [13, 7]</el> <br />
+                <span class="comment">Retrieve the fourth student's scores</span> <br />
+                <span class="function">OUTPUT</span> scores[<span class="number">3</span>] <br />
+                <span class="comment">>>> [13, 7]</span> <br />
                 <br />
-                <el class="comment">Retrieve the second student's first score</el> <br />
-                <el class="function">OUTPUT</el> scores[<el class="number">1</el>][<el class="number">0</el>] <br />
-                <el class="comment">>>> 18</el> <br />
+                <span class="comment">Retrieve the second student's first score</span> <br />
+                <span class="function">OUTPUT</span> scores[<span class="number">1</span>][<span class="number">0</span>] <br />
+                <span class="comment">>>> 18</span> <br />
                 <br />
-                <el class="comment">Get the length of the 2D array</el> <br />
-                <el class="function">OUTPUT</el> <el class="other">LEN</el>(scores) <br />
-                <el class="comment">>>> 5</el> <br />
+                <span class="comment">Get the length of the 2D array</span> <br />
+                <span class="function">OUTPUT</span> <span class="other">LEN</span>(scores) <br />
+                <span class="comment">>>> 5</span> <br />
                 <br />
-                <el class="comment">Get the length of the first element</el> <br />
-                <el class="function">OUTPUT</el> <el class="other">LEN</el>(scores[<el class="number">0</el>]) <br />
-                <el class="comment">>>> 2</el> <br />
+                <span class="comment">Get the length of the first element</span> <br />
+                <span class="function">OUTPUT</span> <span class="other">LEN</span>(scores[<span class="number">0</span>]) <br />
+                <span class="comment">>>> 2</span> <br />
             </code>
         </p>
 
@@ -108,10 +108,10 @@
         </p>
 
         <p class="spoiler noselect">
-            <el class="default">Tap/click to reveal</el>
-            <el class="answer">
+            <span class="default">Tap/click to reveal</span>
+            <span class="answer">
                 Storing the pixel data of images, board games where the board is a grid, and much more.
-            </el>
+            </span>
         </p>
 
         <br />
@@ -125,7 +125,7 @@
         <br /> <br />
         <br /> <br />
 
-        <div id="sub">© Rujul Nayak <el id="year">2024-</el></div>
+        <div id="sub">© Rujul Nayak <span id="year">2024-</span></div>
         <script src="../../year.js"></script>
 
         <script src="../spoilers.js"></script>
