--- a/revision/2B-04-Validation-and-Authentication/index.html
+++ b/revision/2B-04-Validation-and-Authentication/index.html
@@ -87,11 +87,11 @@
         </p>
 
         <p class="spoiler noselect">
-            <el class="default">Tap/click to reveal</el>
-            <el class="answer">
+            <span class="default">Tap/click to reveal</span>
+            <span class="answer">
                 Length check to make sure it's 5 to 10 characters <br />
                 Format check to make sure it starts with a letter
-            </el>
+            </span>
         </p>
 
         <br />
@@ -105,7 +105,7 @@
         <br /> <br />
         <br /> <br />
 
-        <div id="sub">© Rujul Nayak <el id="year">2024-</el></div>
+        <div id="sub">© Rujul Nayak <span id="year">2024-</span></div>
         <script src="../../year.js"></script>
 
         <script src="../spoilers.js"></script>
