--- a/revision/2B-06-Testing/index.html
+++ b/revision/2B-06-Testing/index.html
@@ -99,14 +99,14 @@
         </p>
 
         <p class="spoiler noselect">
-            <el class="default">Tap/click to reveal</el>
-            <el class="answer">
+            <span class="default">Tap/click to reveal</span>
+            <span class="answer">
                 Many issues arise if your software doesn't work, including: <br />
                 &bullet; Competition with other software providers <br />
                 &bullet; Reputational damage <br />
                 &bullet; Legal obligations <br />
                 &bullet; Safety <br />
-            </el>
+            </span>
         </p>
 
         <br />
@@ -120,7 +120,7 @@
         <br /> <br />
         <br /> <br />
 
-        <div id="sub">© Rujul Nayak <el id="year">2024-</el></div>
+        <div id="sub">© Rujul Nayak <span id="year">2024-</span></div>
         <script src="../../year.js"></script>
 
         <script src="../spoilers.js"></script>
