--- a/revision/3-01-Storage-Units/index.html
+++ b/revision/3-01-Storage-Units/index.html
@@ -148,10 +148,10 @@
         </p>
 
         <p class="spoiler noselect">
-            <el class="default">Tap/click to reveal</el>
-            <el class="answer">
+            <span class="default">Tap/click to reveal</span>
+            <span class="answer">
                 Each bit in the nibble can take 2 possible values, so the nibble can take <code>2<sup>4</sup> = 2 &times; 2 &times; 2 &times; 2</code> = 16 possible values.
-            </el>
+            </span>
         </p>
 
         <br />
@@ -165,7 +165,7 @@
         <br /> <br />
         <br /> <br />
 
-        <div id="sub">© Rujul Nayak <el id="year">2024-</el></div>
+        <div id="sub">© Rujul Nayak <span id="year">2024-</span></div>
         <script src="../../year.js"></script>
 
         <script src="../spoilers.js"></script>
