--- a/revision/index.html
+++ b/revision/index.html
@@ -74,7 +74,7 @@
         <br />
         <br />
 
-        <div id="sub">© Rujul Nayak <el id="year">2024-</el></div>
+        <div id="sub">© Rujul Nayak <span id="year">2024-</span></div>
         <script src="../year.js"></script>
     </body>
 </html>
