--- a/revision/3-02-Binary-and-Hexadecimal/index.html
+++ b/revision/3-02-Binary-and-Hexadecimal/index.html
@@ -96,6 +96,11 @@
 
         <br /> <br />
 
+        <a class="next-link" href="../3-03-Binary-Arithmetic/">Next: 3.03 - Binary Arithmetic</a>
+
+        <br /> <br />
+        <br /> <br />
+
         <div id="sub">© Rujul Nayak <span id="year">2024-</span></div>
         <script src="../../year.js"></script>
 
